# Robotics-Frameworks-simulations

./: .gitignore  README.md
01_publisher_subscriber/: CMakeLists.txt  README.md  package.xml
01_publisher_subscriber/src/: publisher_node.cpp  subscriber_node.cpp
02_services_tf2_launch/: CMakeLists.txt  README.md  package.xml
02_services_tf2_launch/launch/: pubsub_launch.py
02_services_tf2_launch/msg/: Num.msg
02_services_tf2_launch/src/: broadcaster_node.cpp  client_node.cpp  server_node.cpp
02_services_tf2_launch/srv/: Add.srv
03_gazebo_simulation_apriltag/: README.md
03_gazebo_simulation_apriltag/apriltag_ros/launch/: tag_36h11_all.launch.py
03_gazebo_simulation_apriltag/rof_ex3/: CMakeLists.txt  package.xml
03_gazebo_simulation_apriltag/rof_ex3/include/jetbot_gazebo/: advanced_robot_control.h  simple_robot_control.h
03_gazebo_simulation_apriltag/rof_ex3/src/: advanced_robot_control.cpp  simple_robot_control.cpp
03_gazebo_simulation_apriltag/rof_gazebo/: CMakeLists.txt  package.xml
03_gazebo_simulation_apriltag/rof_gazebo/launch/: t3_simulation_faps.launch.py
05_computer_vision/: EU_05_CV_Colab.ipynb  README.md  image_processing_solution.py  perspective_transformation.py  perspective_transformation_solution.py
06_navigation_slam/: CMakeLists.txt  EU_06_Navigation_Colab.ipynb  README.md  package.xml
06_navigation_slam/config/: navigation_params.yaml  slam_params.yaml
06_navigation_slam/launch/: navigation_launch.py  slam_launch.py
09_ai_machine_learning/: EU_09_AI_Colab.ipynb  README.md  YOLO_example.py  keras_example.py  keras_example_solution.py  keras_retrain.py  keras_retrain_solution.py
10_12_logistics_capstone/: EU_10_12_Practical_Task_Colab.ipynb  README.md  package.xml  setup.py
10_12_logistics_capstone/perception/: yolo_subscriber.py
10_12_logistics_capstone/rof_ex10_12/: __init__.py
10_12_logistics_capstone/state_machine/: logistics_task_sm.py
