<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_cliserv_package</name>
  <version>0.0.1</version>
  <description>EU_02 – ROS2 II: Service server/client (add_two_ints) and TF2 broadcaster nodes.</description>
  <maintainer email="student@faps.uni-erlangen.de">student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime and build dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- The custom interface package (srv/Add, msg/Num) built separately -->
  <depend>my_cliserv_package_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
